Bug 313233 - Words 2.6 crashes on clicking "New" button for character styles in style manager
Summary: Words 2.6 crashes on clicking "New" button for character styles in style manager
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-14 12:34 UTC by Friedrich W. H. Kossebau
Modified: 2013-01-18 20:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Friedrich W. H. Kossebau 2013-01-14 12:34:46 UTC
Application: calligrawords (2.6 RC2)
KDE Platform Version: 4.9.5 "release 7"
Qt Version: 4.8.4
Operating System: Linux 3.4.11-2.16-desktop x86_64
Distribution: "openSUSE 12.2 (x86_64)"

-- Information about the crash:
Start Words.
Create new document from Blank template (has no named character styles).
Open Style Manager.
Select "Character" tab.
Click "New" button below empty style list.

*Kawooomm*

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f12fc6a3780 (LWP 14844))]

Thread 2 (Thread 0x7f12d89b0700 (LWP 14845)):
#0  0x00007f12f5aef14f in poll () from /lib64/libc.so.6
#1  0x00007f12f10a4ac4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f12f10a4be4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f12f6996136 in QEventDispatcherGlib::processEvents (this=0x7f12d40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f12f696694f in QEventLoop::processEvents (this=this@entry=0x7f12d89afdd0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f12f6966bd8 in QEventLoop::exec (this=0x7f12d89afdd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f12f68690b0 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#7  0x00007f12f69470bf in QInotifyFileSystemWatcherEngine::run (this=0x185c750) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007f12f686c08c in QThreadPrivate::start (arg=0x185c750) at thread/qthread_unix.cpp:338
#9  0x00007f12f65d5e0e in start_thread () from /lib64/libpthread.so.0
#10 0x00007f12f5af72cd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f12fc6a3780 (LWP 14844)):
[KCrash Handler]
#6  0x00007f12fb60534a in KoCharacterStyle::copyProperties (this=0x15cb310, style=0x0) at /home/kossebau/Daten/Projekte/Calligra/calligra/libs/kotext/styles/KoCharacterStyle.cpp:355
#7  0x00007f12fb60547e in KoCharacterStyle::clone (this=0x0, parent=0x0) at /home/kossebau/Daten/Projekte/Calligra/calligra/libs/kotext/styles/KoCharacterStyle.cpp:369
#8  0x00007f12db7117ac in StyleManager::buttonNewPressed (this=0x2578260) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StyleManager.cpp:359
#9  0x00007f12db7125f6 in StyleManager::qt_static_metacall (_o=0x2578260, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7fff6d91ea00) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/StyleManager.moc:85
#10 0x00007f12f697d0ff in QMetaObject::activate (sender=0x1a61d30, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3548
#11 0x00007f12f7bfcca1 in ?? () from /usr/lib64/libQtGui.so.4
#12 0x00007f12f7bfce6c in QAbstractButton::mousePressEvent(QMouseEvent*) () from /usr/lib64/libQtGui.so.4
#13 0x00007f12f7893110 in QWidget::event(QEvent*) () from /usr/lib64/libQtGui.so.4
#14 0x00007f12f784385c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#15 0x00007f12f784853b in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#16 0x00007f12fbeedae8 in KoApplication::notify (this=0x7fff6d91feb0, receiver=0x1a61d30, event=0x7fff6d91f330) at /home/kossebau/Daten/Projekte/Calligra/calligra/libs/main/KoApplication.cpp:504
#17 0x00007f12f6967bfe in QCoreApplication::notifyInternal (this=0x7fff6d91feb0, receiver=0x1a61d30, event=0x7fff6d91f330) at kernel/qcoreapplication.cpp:946
#18 0x00007f12f784469b in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#19 0x00007f12f78bee54 in ?? () from /usr/lib64/libQtGui.so.4
#20 0x00007f12f78bdbe1 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#21 0x00007f12f78e3f72 in ?? () from /usr/lib64/libQtGui.so.4
#22 0x00007f12f10a47f5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f12f10a4b28 in ?? () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f12f10a4be4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#25 0x00007f12f6996116 in QEventDispatcherGlib::processEvents (this=0x1064b80, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#26 0x00007f12f78e3bee in ?? () from /usr/lib64/libQtGui.so.4
#27 0x00007f12f696694f in QEventLoop::processEvents (this=this@entry=0x7fff6d91fe70, flags=...) at kernel/qeventloop.cpp:149
#28 0x00007f12f6966bd8 in QEventLoop::exec (this=0x7fff6d91fe70, flags=...) at kernel/qeventloop.cpp:204
#29 0x00007f12f696b878 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#30 0x00007f12fc2a140c in kdemain (argc=1, argv=0x7fff6d920098) at /home/kossebau/Daten/Projekte/Calligra/calligra/words/part/main.cpp:43
#31 0x0000000000400a3e in main (argc=1, argv=0x7fff6d920098) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/words/part/calligrawords_dummy.cpp:3

Reported using DrKonqi
Comment 1 Pierre Stirnweiss 2013-01-18 20:05:02 UTC
Git commit eb2696c33941d0c62cd23fbb75b0fa3c7c957c55 by Pierre Stirnweiss.
Committed on 17/01/2013 at 19:00.
Pushed by pstirnweiss into branch 'calligra/2.6'.

Fix crash on create new character style

When creating a new character style, Words crashed because an null
pointer was passed around and used. Also, the name of the style was
not updated.
REVIEW: 108444

M  +3    -1    plugins/textshape/dialogs/CharacterGeneral.cpp
M  +9    -1    plugins/textshape/dialogs/FormattingPreview.cpp
M  +31   -6    plugins/textshape/dialogs/StyleManager.cpp
M  +2    -0    plugins/textshape/dialogs/StyleManager.h
M  +5    -8    plugins/textshape/dialogs/StylesModel.cpp

http://commits.kde.org/calligra/eb2696c33941d0c62cd23fbb75b0fa3c7c957c55