Fix crash on create new character style

When creating a new character style, Words crashed because an null
pointer was passed around and used. Also, the name of the style was
not updated.

BUG: 313233
REVIEW: 108444